Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-422

When we specify self-signed certificate in PEM-formatted file as value of the "decaf.net.ssl.trustStore" property and SAN that does't match any name in failover URI, cms is crashing on "R6025 Pure Virtual Function Call" run-time error.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.4.0, 3.4.2, 3.4.4
    • 3.6.0
    • CMS Impl, Decaf
    • None
    • Broker: 5.6.0,
      CMS 3.4.2
      Windows

    Description

      When we specify self-signed certificate in PEM-formatted file as value of the "decaf.net.ssl.trustStore" property and SAN that does't match any name in failover URI, cms is crashing on "R6025 Pure Virtual Function Call" run-time error. I think, the issue can be attributed to multithreading... After Server Certificate Name doesn't match the URI Host Name value. exception is thrown, CMS is trying to fire an exception using listener pointer that is not instantiated properly in void TransportFilter::fire( const decaf::lang::Exception& ex ) method... It is not happening all the time, so a simple unit test won't do... I'm attaching a bit re-factored HelloWorldProducer app and the certificate file that I used... There is possibility that it has something to do with InactivityMonitor injected into transport filter chain... When I tried "failover://(ssl://dev1467:61618?transport.useInactivityMonitor=false) instead of "failover://(ssl://dev1467:61618)" it behaves much more stable, i.e. client app can be re-run many more times without a crash, still crashing though in OpenFormatNegotiator

      Attachments

        1. AMQTest.cpp
          15 kB
          Mikhail Melamud
        2. brokerkeystore.pem
          2 kB
          Mikhail Melamud

        Issue Links

          Activity

            People

              tabish Timothy A. Bish
              mikmela Mikhail Melamud
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: